consolidation and restructure of foldage.